[package]
name = "advent2020"
version = "0.1.0"
authors = ["Jacques Schutte <jqschutte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
num = "0.3.1"
pathfinding = "2.0.4"
rand = "0.7.3"
regex = "1.4.2"
structopt = "0.3.20"
